# StinkerbellBot

./: .gitignore  README.md  README.rst  development.html  genindex.html  getting_started.html  index.html  index.md  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: pages.sh  pages.yml
_modules/: index.html
_modules/stinkerbellbot/: sillybuttonsview.html
docs/source/: conf.py  development.rst  getting_started.rst  index.rst
stinkerbellbot/: .env  __init__.py  bot.py  buttons.py  sillybutton.py  sillybuttons.py  sillybuttonsview.py
tests/: test_stinkerbellbot.py
