[tool.poetry]
name = "StinkerbellBot"
version = "0.1.0"
description = ""
authors = ["Janne Beate Bakeng"]

[tool.poetry.dependencies]
python = ">=3.9"
python-dotenv = "^0.19.0"
PyNaCl = "^1.4.0"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
py-cord = "2.0.0b3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
